--- a/articles/config.yml
+++ b/articles/config.yml
@@ -1,31 +1,9 @@
-# review-epubmaker向けの設定ファイルの例。
-# yamlファイルをRe:VIEWファイルのある場所に置き、
-# 「review-epubmaker yamlファイル」を実行すると、<bookname>.epubファイルが
-# 生成されます。
-# このファイルはUTF-8エンコーディングで記述してください。
-
-# この設定ファイルでサポートするRe:VIEWのバージョン番号。
-# major versionが違うときにはエラーを出す。
-review_version: 3.0
-
-# ほかの設定ファイルの継承を指定できる。同じパラメータに異なる値がある場合は、
-# 呼び出し元の値が優先される。
-# A.yml、B.ymlのパラメータを継承する例。A.ymlとB.ymlに同じパラメータがある
-# 場合、B.ymlの値が優先される。さらに今このファイルに同じパラメータがあるなら、
-# その値がB.ymlよりも優先される。
-# 同様にA.yml、B.yml内でさらにinherit:パラメータを使うこともできる。
-# inherit: ["A.yml", "B.yml"]
-
-# ブック名(ファイル名になるもの。ASCII範囲の文字を使用)
-bookname: ReVIEW-Template
-# 記述言語。省略した場合はja
+review_version: 3.1
+bookname: showks-book
 language: ja
+booktitle: {name: "showksで始めるCloud Native開発", file-as: "showks-book"}
 
-# 書名
-booktitle: {name: "Re:VIEWテンプレート", file-as: "reviewテンプレート"}
-
-# 著者名。「, 」で区切って複数指定できる
-aut: [{name: "TechBooster編", file-as: "techboosterヘン"}]
+aut: [{name: "showKsチーム", file-as: "showKsTeam"}]
 
 # 以下はオプション
 # 以下はオプション(autと同じように配列書式で複数指定可能)。
@@ -66,16 +44,9 @@ pbl: TechBooster
 # a-trc, trc: 筆記・タイプ作業者
 # a-trl, trl: 翻訳者
 
-# 刊行日(省略した場合は実行時の日付)
 date: 2019-4-14
-# 発行年月。YYYY-MM-DD形式による配列指定。省略した場合はdateを使用する
-# 複数指定する場合は次のように記述する
-# [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
-# 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
 history: [["2019-4-14 技術書典6版 v1.0.0"]]
-# 権利表記(配列で複数指定可)
-# rights: (C) 2016 Re:VIEW Developers
-rights: (C) 2017-2019 TechBooster
+rights: (C) 2018-2019 showKs Team / Japan Container Days
 # description: 説明
 # subject: 短い説明用タグ(配列で複数指定可)
 # type: 書籍のカテゴリーなど(配列で複数指定可)
@@ -88,20 +59,12 @@ rights: (C) 2017-2019 TechBooster
 debug: null
 
 # 固有IDに使用するドメイン。省略した場合は時刻に基づくランダムUUIDが入る
-urnid: urn:uid:https://github.com/TechBooster/ReVIEW-Template
-#
-# ISBN。省略した場合はurnidが入る
-# isbn: null
-#
-# HTMLファイルの拡張子(省略した場合はhtml)
+urnid: urn:uid:https://github.com/containerdaysjp/showks-book.git
 htmlext: html
-#
 # CSSファイル(配列で複数指定可、yamlファイルおよびRe:VIEWファイルを置いたディレクトリにあること)
-stylesheet: ["style.css"]
-
+stylesheet: ["styles/style.css"]
 # ePUBのバージョン (2か3)
 epubversion: 3
-#
 # HTMLのバージョン (4か5。epubversionを3にしたときには5にする)
 htmlversion: 5
 
@@ -173,7 +136,7 @@ colophon: true
 # catalogfile: catalog.yml
 
 # reファイルを格納するディレクトリ。省略した場合は以下 (. はカレントディレクトリを示す)
-# contentdir: .
+contentdir: re
 
 # @<w>命令で使用する単語ファイルのパス
 # words_file: words.csv
@@ -241,7 +204,7 @@ direction: "ltr"
 epubmaker:
   # HTMLファイルの拡張子
   htmlext: xhtml
-  stylesheet: ["style.css","epub_style.css"]
+  stylesheet: ["styles/style.css","styles/epub_style.css"]
   #
   # 目次を要素の階層表現にしない。省略した場合(null)は階層化する。
   # 特に部扉が入るなどの理由で、構成によっては階層化目次でepubcheckに
@@ -409,4 +372,4 @@ pdfmaker:
 # という構成にする必要がある(インデントさせる)
 #
 webmaker:
-    stylesheet: ["style.css","style-web.css"]
+    stylesheet: ["styles/style.css","styles/style-web.css"]
