--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -2,7 +2,10 @@ PREDEF:
   - preface.re
 
 CHAPS:
-  - article.re
+  - chapter1.re
+  - chapter2.re
+  - chapter3.re
+  - chapter4.re
 
 APPENDIX:
 
