--- a/ci/pipeline-jacopen.yml
+++ b/ci/pipeline-jacopen.yml
@@ -9,6 +9,7 @@ resources:
   webhook_token: ((webhook_token))
   source:
     uri: https://github.com/containerdaysjp/showks-book.git 
+    branch: jacopen
 jobs:
 - name: build-and-upload
   public: true
@@ -64,21 +65,21 @@ jobs:
         - -c
         - |
           set -e
-
-          REVISION=`cat repo/.git/ref`
+          BRANCH=jacopen
+          REVISION=`cat repo/.git/short_ref`
           echo $SERVICE_ACCOUNT > credential.json
           gcloud auth activate-service-account --key-file=credential.json
           gcloud config set project $PROJECT_NAME 
           
-          gsutil cp output/showks-book.pdf gs://showks-book-bucket/showks-book-${REVISION}.pdf
-          gsutil cp output/showks-book.epub gs://showks-book-bucket/showks-book-${REVISION}.epub
-          gsutil acl ch -u AllUsers:R gs://showks-book-bucket/showks-book-${REVISION}.pdf
-          gsutil acl ch -u AllUsers:R gs://showks-book-bucket/showks-book-${REVISION}.epub
+          gsutil cp output/showks-book.pdf gs://showks-book-bucket/showks-${BRANCH}-${REVISION}.pdf
+          gsutil cp output/showks-book.epub gs://showks-book-bucket/showks-${BRANCH}-${REVISION}.epub
+          gsutil acl ch -u AllUsers:R gs://showks-book-bucket/showks-${BRANCH}-${REVISION}.pdf
+          gsutil acl ch -u AllUsers:R gs://showks-book-bucket/showks-${BRANCH}-${REVISION}.epub
           cat <<EOF >> messages/message
           書籍のビルドが完了しました。
           以下から内容の確認が可能です。
-          PDF: https://storage.googleapis.com/showks-book-bucket/showks-book-${REVISION}.pdf
-          ePub: https://storage.googleapis.com/showks-book-bucket/showks-book-${REVISION}.epub" 
+          PDF: https://storage.googleapis.com/showks-book-bucket/showks-${BRANCH}-${REVISION}.pdf
+          ePub: https://storage.googleapis.com/showks-book-bucket/showks-${BRANCH}-${REVISION}.epub" 
           EOF
     on_success:
       put: slack-alert
